samples/_failures_safe/1761144883_461f07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e3d2796.c: In function ‘main’:
./samples/SAFE/__tmp_3e3d2796.c:178: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_3e3d2796.c:177:15: note: to match this ‘(’
  177 |     if (!fgets(input, sizeof(input), stdin
      |               ^
./samples/SAFE/__tmp_3e3d2796.c:177:5: error: expected declaration or statement at end of input
  177 |     if (!fgets(input, sizeof(input), stdin
      |     ^~
